# thor

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: deploy_docs.yml  release-python.yml  release-rust.yml  rust.yml  test-python.yml  test-rust.yml
cthor/include/: thor.h
cthor/include/internal/: biotsavart.h  csv.h  morton.h  simd.h  sort.h  sources.h  utils.h
cthor/src/: _main.c  sort.c  targets.c
cthor/tests/: test_loop.c  test_mesh_solenoid.c  test_random.c  test_self_dense_solenoid.c  test_simd.c
cthor/tests/data/: solenoid.stp
cthor/tests/jl/: morton.jl  test_volume.jl
docs/: build-notes.md  design_notes.md  index.md  morton-code-octree.md  performance-engineering.md  python-api.md  simd.md  tests-and-benchmarks.md  tests-and-validation.md  thor.md
docs/figs/: plot_dense_solenoid_results.jl  plot_loop_test_results.jl
examples/: benchmark.py  benchmark_error.py  example.py
include/: thor.h
include/internal/: biotsavart.h  octree.h  problems.h  simd.h  targets.h  utils.h
src/: analytical.rs  archive.rs  biotsavart.c  biotsavart.h  biotsavart.rs  biotsavart_parallel.rs  direct.rs  docs-header.html  dualtree.rs  errors.rs  io.rs  lib.rs  linear_octree.c  main.c  mat3.rs  math.rs  morton.c  morton.rs  octree.c  octree.h  octree.jl  octree.rs  octree_generic.rs  problems.c  python.rs  refactor_octree.c  refactor_octree.h  sources.c  sources.rs  thor.jl  thor.py  utils.c  utils.h  vec3.rs  vector.rs
src/archive/: biotsavart.rs  dualtree.rs  octree.rs  octree_parallel.rs
src/math/: atan2.rs  gradient.rs  ln.rs
src/octree/: bbox.rs  point.rs  tet_element.rs
src/octree_generic/: point.rs  tet_element.rs
src/oersted/: __init__.py  biotsavart.py  magnetization.py  materials.py  mesh.py
src/sources/: element.rs  hex8.rs  point.rs  tet4.rs
src/thor/: __init__.py  _thor.pyi  biotsavart.py  magnetization.py  materials.py  mesh.py  test_utils.py  testing.py
tests/: Makefile  __init__.py  benchmark.py  benchmark_error.py  example.py  magnetic_moment.jl  multipole.jl  runtests.jl  test.c  test_arrays.py  test_dense_solenoid.c  test_dipoles.py  test_examples.py  test_helmholtz.py  test_hex.py  test_loop.c  test_loop.jl  test_mag_force.py  test_mag_sphere_tet.py  test_magnetized_sphere.py  test_mesh_solenoid.c  test_mesher.py  test_read.csv  test_rust.py  test_simd.c  test_solenoid.c  test_solenoid.jl  test_solenoid.py  test_solid_solenoid.c  test_tet.py  test_uneven_volume.jl  test_volume.jl  test_wire.c
tests/data/: main.py  ring.stp  sphere.stp
tests/jl/: multipole.jl  test_loop.jl  test_solenoid.jl
thor/: __init__.py  _thor.pyi  biotsavart.py  magnetization.py  materials.py  mesh.py  test_utils.py  utils.py
thor/src/: analytical.rs  lib.rs  octree.rs
