[package]
name = "thor"
version = "0.1.0"
edition = "2024"
authors = ["Ryan Etkins <retkins@pm.me>"]
description = "Approximate Biot-Savart Law integration in near-linear time"

[dependencies]
numpy = {version = "0.27.1", optional=true}
pyo3 = {version = "0.27.2", features = ["extension-module"] , optional=true}
rayon = {version = "1.11.0", optional=true}

# Enable features with the flag: --features python
[features]
default = [] 
python = ["numpy", "pyo3"]
parallel = ["rayon"]

[lib]
name = "thor" 
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1

[profile.test]
opt-level = 3
