[package]
name = "thor"
version = "0.1.1"
edition = "2024"
authors = ["Ryan Etkins <retkins@pm.me>"]
description = "Lightning-fast magnetic fields calculations"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
repository = "https://github.com/retkins/thor/"
homepage = "https://retkins.github.io/thor/"

[dependencies]
numpy = {version = "0.27.1", optional=true}
pyo3 = {version = "0.27.2", features = ["extension-module"] , optional=true}
rayon = {version = "1.11.0", optional=true}

# Enable features with the flag: --features python
[features]
default = [] 
python = ["numpy", "pyo3"]
parallel = ["rayon"]

[lib]
name = "thor" 
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1

[profile.test]
opt-level = 3
