[project]
name = "thor"
dynamic = ["version"]
authors = [{name = "Ryan Etkins", email = "retkins@pm.me"}]
description = "Approximate Biot-Savart Law integration in near-linear time"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.21.2",
]

# Optional deps not exposed to pypi install interface
[project.dependency-groups]
dev = [
    "pytest>=9.0.0",
    "matplotlib>=3.10",
    "gmsh>=4.15",
]

# Optional deps accessible from pypi
[project.optional-dependencies]
mesh = [
    "gmsh>=4.15"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."  
module-name = "thor._thor" 
features = ["python", "parallel"]
profile = "release"
version = { source = "cargo" }
